Automated Patches for July 2023 (#36096)
* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-messaging-webpubsub to the release version 1.2.5.

* Prepare azure-messaging-webpubsub for 1.2.6 patch release.

* Reset sources for azure-data-schemaregistry-apacheavro to the release version 1.1.7.

* Prepare azure-data-schemaregistry-apacheavro for 1.1.8 patch release.

* Reset sources for azure-messaging-eventhubs to the release version 5.15.6.

* Prepare azure-messaging-eventhubs for 5.15.7 patch release.

* Reset sources for azure-data-appconfiguration to the release version 1.4.6.

* Prepare azure-data-appconfiguration for 1.4.7 patch release.

* Reset sources for azure-security-keyvault-keys to the release version 4.6.3.

* Prepare azure-security-keyvault-keys for 4.6.4 patch release.

* Reset sources for azure-communication-rooms to the release version 1.0.1.

* Prepare azure-communication-rooms for 1.0.2 patch release.

* Reset sources for azure-security-keyvault-administration to the release version 4.3.3.

* Prepare azure-security-keyvault-administration for 4.3.4 patch release.

* Reset sources for azure-data-tables to the release version 12.3.12.

* Prepare azure-data-tables for 12.3.13 patch release.

* Reset sources for azure-communication-chat to the release version 1.3.9.

* Prepare azure-communication-chat for 1.3.10 patch release.

* Reset sources for azure-search-documents to the release version 11.5.8.

* Prepare azure-search-documents for 11.5.9 patch release.

* Reset sources for azure-mixedreality-remoterendering to the release version 1.1.19.

* Prepare azure-mixedreality-remoterendering for 1.1.20 patch release.

* Reset sources for azure-communication-phonenumbers to the release version 1.1.3.

* Prepare azure-communication-phonenumbers for 1.1.4 patch release.

* Reset sources for azure-messaging-eventhubs-checkpointstore-blob to the release version 1.16.7.

* Pr