@@ -7,7 +7,7 @@
 
     <groupId>com.azure</groupId>
     <artifactId>azure-monitor-ingestion</artifactId>
-    <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure:azure-monitor-ingestion;current} -->
+    <version>1.0.5</version> <!-- {x-version-update;com.azure:azure-monitor-ingestion;current} -->
 
     <packaging>jar</packaging>
     <name>Microsoft Azure SDK for Azure Monitor Data Ingestion</name>
@@ -48,7 +48,6 @@
         <javaModulesSurefireArgLine>
             --add-exports com.azure.core/com.azure.core.implementation.jackson=ALL-UNNAMED
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-            --add-exports com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
         </javaModulesSurefireArgLine>
     </properties>
